# wiki-link-extractor

./: Cargo.toml  README.md
src/: extractor.rs  main.rs
