[package]
name = "ts-link-extraction"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.37.5", features = [
  "encoding",
  "escape-html",
  "overlapped-lists",
] }
streaming-iterator = "0.1.9"
tree-sitter = "0.25.6"
#tree-sitter-wikitext = { git = "https://github.com/santhoshtr/tree-sitter-wikitext" }
tree-sitter-wikitext = { path = "../tree-sitter-wikitext" }
clap = { version = "4.3", features = ["derive"] }
